# spatnic

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: train_spatnic.ipynb
spatnic/: __init__.py  export.py  finetune.py  model.py  predict.py  preprocessing.py
tests/: test_export.py  test_model.py  test_predict.py  test_preprocessing.py
